--- a/aula-30-2023-06-13/exercicios/exercicio01/style.css
+++ b/aula-30-2023-06-13/exercicios/exercicio01/style.css
@@ -22,3 +22,12 @@
     font-weight: 400;
     color: green;
 }
+
+.normal {
+    color: #2b2b2a;
+}
+
+.autoContraste {
+    background-color: black;
+    color: white;
+}
