--- a/aula-37-2023-06-22/exercicios/exercicio01/css/style.css
+++ b/aula-37-2023-06-22/exercicios/exercicio01/css/style.css
@@ -88,8 +88,57 @@
   text-align: center;
 }
 
+
+.header {
+  height: 92px;
+  padding: 17px;
+  background-color: #6950A1;
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 31px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  margin-bottom: 31px;
+}
+
+.input {
+  width: 100%;
+  border: 1px solid #6950A1;
+  border-radius: 15px;
+  padding-left: 10px;
+}
+
+.input-default {
+  height: 35px;
+}
+
+.submit {
+  width: 100%;
+  background: #6950A1;
+  border-radius: 25px;
+  color: white;
+  font-weight: 700;
+  height: 35px;
+  border: none;
+  cursor: pointer;
+  margin-top: 30px;
+}
+
 section {
   margin-bottom: 15px;
+}
+
+.voltar-button a {
+  color: white;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
