--- a/aula-37-2023-06-22/exercicios/exercicio01/css/style.css
+++ b/aula-37-2023-06-22/exercicios/exercicio01/css/style.css
@@ -41,6 +41,11 @@
   cursor: pointer;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
 .card {
   display: flex;
   border: 1px solid #6950A1;
@@ -58,7 +63,7 @@
   justify-content: space-between;
 }
 
-.card-title{
+.card-title {
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -90,7 +95,7 @@
 
 .remove-button {
   background: #FFFFFF;
-  border: 1px solid #1E1E1E;  
+  border: 1px solid #1E1E1E;
   border-radius: 6px;
   padding: 5px;
   cursor: pointer;
@@ -101,7 +106,7 @@
   border-radius: 6px;
   color: #FFFFFF;
   padding: 5px;
-  border: 1px solid #6950A1;  
+  border: 1px solid #6950A1;
   cursor: pointer;
 }
 
@@ -115,7 +120,7 @@
   font-weight: 700;
   display: flex;
   align-items: center;
-  cursor: pointer;    
+  cursor: pointer;
   text-align: center;
   margin: 0 10px;
 }
@@ -179,6 +184,34 @@ section {
   margin: 0 20px;
 }
 
+#content-autor {
+  padding: 50px;
+}
+
+.card-list-autor {
+  border-radius: 10px;
+    border: 1px solid #939393;
+    background: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    max-width: 60%;
+    padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+    color: #000;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.card-autor-acoes {
+  display: flex;
+}
+
+.card-autor-button {
+  cursor: pointer;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   .card {
     width: 100%;
@@ -195,9 +228,9 @@ section {
   }
 
   .card-content {
-    margin-left:0;
+    margin-left: 0;
   }
-  
+
   .modal-container {
     width: 90%;
   }
