feat: add example aula 9

--- a/aula-09-2023-05-12/exemplos/exemplo03/style.css
+++ b/aula-09-2023-05-12/exemplos/exemplo03/style.css
@@ -34,3 +34,13 @@ body {
     top: -50px;
     left: 50px;
 }
+
+.filha3 {
+    width: 100px;
+    height: 130px;
+    background-color: blue;
+    position: absolute;
+    top: -50px;
+    left: 50px;
+    z-index: -1;
+}
